@@ -83,10 +83,11 @@ Integraatiotestien ajaminen
 python3 setup.py pytest
 
 Jotkin testit onnistuvat vain suomalaisesta IP-osoitteesta, koska osa
-Areenan videoista on saatavilla vain Suomessa. Hypätäksesi tällaisten
-testien yli määrittele ympäristömuuttujan ENABLE_FINLAND_TESTS arvoksi 0:
+Areenan videoista on saatavilla vain Suomessa. Oletuksena nämä testit
+hypätään yli. Ajaaksesi myös nämä testit määrittele ympäristömuuttujan
+ENABLE_FINLAND_TESTS arvoksi 1:
 
-export ENABLE_FINLAND_TESTS=0
+export ENABLE_FINLAND_TESTS=1
 python3 setup.py pytest
 
 
