@@ -78,7 +78,7 @@ def test_areena_series_urls():
     assert all(['a.mp4' in url for url in urls])
 
 
-@pytest.mark.skipif(os.getenv('ENABLE_FINLAND_TESTS') == '0',
+@pytest.mark.skipif(os.getenv('ENABLE_FINLAND_TESTS') != '1',
                     reason="Test works only in Finland")
 def test_areena_live_url():
     streamurl = fetch_stream_url('https://areena.yle.fi/tv/suorat/yle-tv1')
@@ -87,7 +87,7 @@ def test_areena_live_url():
     assert '.f4m' in streamurl[0]
 
 
-@pytest.mark.skipif(os.getenv('ENABLE_FINLAND_TESTS') == '0',
+@pytest.mark.skipif(os.getenv('ENABLE_FINLAND_TESTS') != '1',
                     reason="Test works only in Finland")
 def test_areena_live_metadata():
     metadata = fetch_metadata('https://areena.yle.fi/tv/suorat/yle-tv1')
@@ -98,7 +98,7 @@ def test_areena_live_metadata():
     assert metadata[0]['region'] == 'Finland'
 
 
-@pytest.mark.skipif(os.getenv('ENABLE_FINLAND_TESTS') == '0',
+@pytest.mark.skipif(os.getenv('ENABLE_FINLAND_TESTS') != '1',
                     reason="Test works only in Finland")
 def test_areena_ohjelmat_embedded_live_url():
     streamurl = fetch_stream_url('https://areena.yle.fi/tv/ohjelmat/30-595?play=yle-tv2')
@@ -107,7 +107,7 @@ def test_areena_ohjelmat_embedded_live_url():
     assert 'master.m3u8' in streamurl[0]
 
 
-@pytest.mark.skipif(os.getenv('ENABLE_FINLAND_TESTS') == '0',
+@pytest.mark.skipif(os.getenv('ENABLE_FINLAND_TESTS') != '1',
                     reason="Test works only in Finland")
 def test_areena_ohjelmat_embedded_live_metadata():
     metadata = fetch_metadata('https://areena.yle.fi/tv/ohjelmat/30-595?play=yle-tv2')
