@@ -5,6 +5,7 @@ Distributed under the GPL v3
 xx xxx 2018, Version 2.38
 
 - More robust parsing for Elävä Arkisto
+- To run tests that only succeed on a Finnish IP, set ENABLE_FINLAND_TESTS=1
 
 21 Oct 2018, Version 2.37
 
